--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "description": "First server API rest and BDD with nodeJS",
   "main": "app.js",
-//  "scripts": {
-//    "start": "nodemon app.js"
-//  },
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "author": "Julien Legoux",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
