--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Julien Legoux",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
